# policense

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: generate.sh  policense.1.scd
policense/: __main__.py  options.py  policense.py
policense/license/: 0BSD.toml  2BSD.toml  3BSD.toml  AGPL-3.0.toml  AGPLV3.toml  APACHE-2.0.toml  APACHE2.toml  ARTISTIC-2.0.toml  ARTISTIC2.toml  BEERWARE.toml  BSD-1-CLAUSE.toml  BSD-2-CLAUSE.toml  BSD-3-CLAUSE-CLEAR.toml  BSD-3-CLAUSE.toml  BSD-4-CLAUSE.toml  BSD0.toml  BSD1.toml  BSD4.toml  BSL-1.0.toml  BSL1.toml  CC-BY-4.0.toml  CC-BY-SA-4.0.toml  CC0-1.0.toml  CC0.toml  CLEARBSD.toml  EUPL-1.2.toml  EUPL.toml  EXPAT.toml  FSFAP.toml  GPL-2.0.toml  GPL-3.0.toml  GPL2.toml  GPLV3.toml  ISC.toml  LGPL-2.0.toml  LGPL-2.1.toml  LGPL-3.0.toml  LGPLV2.toml  LGPLV21.toml  LGPLV3.toml  (+16 more)
policense/license/template/: LICENSE.toml
